feat(cdk): add receive inbound activities
- The Mumble endpoints API introduces a new endpoint:
    - POST /users/{userId}/inbox

  It receives activity objects sent to a user from other ActivityPub
  servers. It invokes a newly introduce Lambda function
  `lambda/receive_inbound_activity` that verifies an activity and saves
  it in the inbox folder in the S3 bucket. Actual processing of the
  activity object will be done by the event handler of the S3 bucket,
  but it is not implemented yet.

  Introduces new models:
    - `Object`: represents an object in general
    - `Activity`: represents an activity

  Introduces a request validator and applies it to all the endpoints.

  Updates the OpenAPI definition for development.
